# docs/swagger.json
@@ -18,6 +18,43 @@
     "basePath": "/",
     "paths": {
         "/bot": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "get all bot",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get all bot by id",
+                "operationId": "get_all_bot",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Bot"
+                            }
+                        }
+                    }
+                }
+            },
             "put": {
                 "security": [
                     {
@@ -99,52 +136,6 @@
                 }
             }
         },
-        "/bot/user/{id}": {
-            "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "get all bot",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Get all bot by id",
-                "operationId": "get_all_bot",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bot Data",
-                        "name": "user_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "default": "Bearer \u003cAdd access token here\u003e",
-                        "description": "Insert your access token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Bot"
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/bot/{id}": {
             "get": {
                 "security": [
@@ -162,13 +153,6 @@
                 "summary": "Get bot by id",
                 "operationId": "get_bot",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bot Data",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "default": "Bearer \u003cAdd access token here\u003e",
@@ -577,7 +561,7 @@
                 }
             }
         },
-        "models.Scenario": {
+        "models.Dialog": {
             "type": "object",
             "properties": {
                 "actions": {
@@ -586,8 +570,25 @@
                         "$ref": "#/definitions/models.Action"
                     }
                 },
+                "isMain": {
+                    "type": "boolean"
+                },
+                "trigger": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Scenario": {
+            "type": "object",
+            "properties": {
                 "botId": {
                     "type": "string"
+                },
+                "fialogs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Dialog"
+                    }
                 },
                 "id": {
                     "type": "string"
@@ -624,9 +625,6 @@
                 "telegram": {
                     "type": "string"
                 },
-                "userID": {
-                    "type": "string"
-                },
                 "whatsAppID": {
                     "type": "string"
                 },
@@ -638,14 +636,14 @@
         "service.ScenariosInput": {
             "type": "object",
             "properties": {
-                "actions": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Action"
-                    }
-                },
                 "botID": {
                     "type": "string"
+                },
+                "dialogs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Dialog"
+                    }
                 },
                 "name": {
                     "type": "string"
