# pkg/models/dialog.go
@@ -1,0 +1,7 @@
+package models
+
+type Dialog struct {
+	IsMain  bool
+	Trigger string
+	Actions []Action
+}
